--- a/Wpf_Work_15/MainWindow.xaml
+++ b/Wpf_Work_15/MainWindow.xaml
@@ -17,9 +17,9 @@
             <FlowDocument>
                 <Table>
                     <Table.Columns>
-                        <TableColumn Width="0.2*"/>
+                        <TableColumn Width="0.1*"/>
                         <TableColumn Width="*"/>
-                        <TableColumn Width="0.2*"/>
+                        <TableColumn Width="0.1*"/>
                     </Table.Columns>
                     <TableRowGroup>
                         <TableRow>
@@ -28,7 +28,7 @@
                                 </Paragraph>
                             </TableCell>
                             <TableCell >
-                                <Paragraph FontSize="20" TextAlignment="Left" >
+                                <Paragraph FontSize="18" TextAlignment="Left" >
                                     <Bold>Сколько стоит завести волнистого попугайчика</Bold>
                                 </Paragraph>
                             </TableCell>
@@ -43,7 +43,7 @@
                                 </Paragraph>
                             </TableCell>
                             <TableCell>
-                                <Paragraph TextAlignment="Left">
+                                <Paragraph TextAlignment="Left" FontStyle="Italic" >
                                     И быстро ли надоедает мыть клетку
                                 </Paragraph>
                             </TableCell>
@@ -71,8 +71,7 @@
                     Но содержать попугая не всегда просто. По отзывам знакомых, птицы часто обгрызают обои и корешки книг, какают на люстру и занавески 
                     и мешают спать по утрам. Также нужно понимать, что уборки точно прибавится. Придется мыть не только клетку, но и пространство вокруг нее.
                     Попугай разбрасывает шелуху и два-три раза в год линяет. Мусор разлетается вокруг клетки — нужно каждый день пылесосить. Попугаи — шумные
-                    птицы. Они громко чирикают, особенно в ответ на резкие звуки. Если вы любите тишину, заводить птицу точно не стоит. Но у нас двое маленьких
-                    детей, так что мы привыкли к шуму. А еще попугаи — социальные птицы. Им нужно внимание хозяина. Без общения они грустят и быстро дичают,
+                    птицы. Они громко чирикают, особенно в ответ на резкие звуки. Если вы любите тишину, заводить птицу точно не стоит. А еще попугаи — социальные птицы. Им нужно внимание хозяина. Без общения они грустят и быстро дичают,
                     перестают садиться на руку, клюются. Не получится завести волнистика и забыть про него: придется уделять попугаю время.
                     </Paragraph>
                 <Paragraph TextAlignment="Left">
@@ -101,8 +100,7 @@
                             <Image Source="Data/7.png"/>
                         </BlockUIContainer>
                     </Floater>
-                    но это не входит в обязательный минимум и нравится не всем птицам. Например, Снежок не любит, когда в клетке
-                    появляется что-то незнакомое. Большую часть времени попугай проводит в клетке, и это единственный правильный вариант его содержания в 
+                    но это не входит в обязательный минимум и нравится не всем птицам. Большую часть времени попугай проводит в клетке, и это единственный правильный вариант его содержания в 
                     квартире. Если птицу совсем не выпускать из клетки, у нее постепенно ослабнут мышцы крыльев и она разучится летать. Активность необходима
                     для здоровья: попугаю нужно как можно чаще летать, лучше — каждый день. Но только под присмотром: попугаи маленькие, они легко могут 
                     провалиться за шкаф или запутаться в проводах. Также на птицу, свободно перемещающуюся по квартире, банально можно случайно наступить 
